tests/files/type_checker_tests/should_fail/184.cmdr
//Should fail calling builtin with incorrect number of parameters
sin(3, 3);
